--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "version": "28.0",
   "alert_message": "",
   "force_disable": false,
-  "download_url": "https://t.me/Fer3on_Mod"
+  "download_url": "https://t.me/Fer3onOS/17424"
 }
