--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "version": "28.0",
-  "alert_message": "",
-  "force_disable": false,
+  "version": "28.1",
+  "alert_message": "Test",
+  "force_disable": true,
   "download_url": "https://t.me/Fer3onOS/17424"
 }
