--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
   "latest_version": "38.0",
   "download_url": "https://t.me/Fer3onOS/17424",
   "update_message": "🚀 تحديث جديد متاح! تم إضافة ميزات جديدة.",
-  "kill_switch": true,
+  "kill_switch": false,
   "kill_message": "تم إيقاف الإضافة مؤقتاً للصيانة."
 }
